# MiniFleet

./: .gitignore  README.md  pyproject.toml
dashboard/: index.html
docs/: SETUP-MAC-MINIS.md  SETUP-TWO-MACS.md  WORKFLOW.md
minifleet/: cli.py  db.py  device.py  github.py  health.py  models.py  notifications.py
minifleet/coordinator/: main.py
minifleet/loop/: __init__.py  config.py  jit.py  multi_agent.py  playbook.py  runner.py  state.py  verify.py
minifleet/playbooks/: default.md
minifleet/worker/: executor.py  git_push.py  logs.py  main.py  sync.py
scripts/: detect-device.sh  install.sh  setup-coordinator.sh  setup-github.sh  setup-remote-control.sh  setup-worker.sh
