[project]
name = "minifleet"
version = "0.1.0"
description = "Run Claude Code agents across Macs (Minis, MacBooks, etc.) with Remote Control and a reconnectable dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.scripts]
minifleet-coordinator = "minifleet.coordinator.main:main"
minifleet-worker = "minifleet.worker.main:main"
minifleet = "minifleet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minifleet"]

[tool.hatch.build.targets.wheel.force-include]
"minifleet/playbooks" = "minifleet/playbooks"
